--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,10 +2,20 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-light{
-    color:#232127;
+html {
+    margin: 0;
 }
 
-.App-dark{
-    color:#e5e3e8;
+.App-light {
+    background: #fff;
+    color: #232127;
+    width: 100%;
+    min-height: 100vw;
+}
+
+.App-dark {
+    background: #000;
+    color: #e5e3e8;
+    width: 100vw;
+    min-height: 100vh;
 }
