--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,12 +10,14 @@ html {
     background: #fff;
     color: #232127;
     width: 100%;
-    min-height: 100vw;
+    height: 100vh;
+    overflow-y: scroll;
 }
 
 .App-dark {
     background: #000;
     color: #e5e3e8;
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
+    overflow-y: scroll;
 }
